--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div>Наш e-mail: <a href="mailto:maidk@mail.ru">maidk@mail.ru</a></div>
     <h1>fefefe</h1>
 </body>
 </html>
