--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ng</title>
+    <script src="js/edds"></script>
 </head>
 <body>
      <h1>Master box gufi</h1>
